# TextMining

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile  README.md  configure.sh  subject.txt
include/structures/: BasicTrie.hpp  CompactTrie.hpp  TrieBuilder.hpp  trie.h
include/utils/: CommandLineArguments.hpp  Defines.hpp  Functions.hpp  WordsContainer.hpp  WordsIterator.hpp  defines.hpp  functions.hpp
src/: CMakeLists.txt  TextMiningAppMain.cpp  TextMiningCompilerMain.cpp
src/structures/: BasicTrie.cpp  CompactTrie.cpp  TrieBuilder.cpp  trie.cpp
src/utils/: CommandLineArguments.cpp  Functions.cpp  WordsContainer.cpp  WordsIterator.cpp  functions.cpp
test/: Generate.py  Test.py  main.py  test.txt
